@@ -1,3 +1,10 @@
+#revision 1295
+	ctapmex 03.02.2010 10:52
+	1. в FarEditor::editorInput не использовался хак фара для быстрого доступа к строкам. после исправления существенно
+		увеличилась скорость
+	2. в BaseEditor::validate исправлено возможное зацикливание
+	3. маленькая оптимизация кода 
+
 #revision 1278
 	ctapmex 25.01.2010 10:21
 	1. переделал r1183 , т.к. оказалось, что хелп pcolorer2 не соответсвовал описанию в ParserFactory.h
